<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity"
        >

        <LinearLayout
            android:padding="@dimen/_10sdp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/imgBack"
                android:src="@drawable/back"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp">

            </ImageView>

            <TextView
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingLeft="5sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_success"
                android:textColor="@color/gray"
                android:textSize="@dimen/_16sdp"
                />

            <TextView
                android:layout_marginTop="@dimen/_30sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_id"
                android:textColor="@color/gray"
                android:textSize="@dimen/_14sdp"
                />

            <EditText
                android:textCursorDrawable="@drawable/black_cursor"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal"
                android:paddingLeft="@dimen/_5sdp"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_8sdp"
                android:hint=""
                android:textColor="@color/gray"
                android:inputType="textEmailAddress"
                />

            <View
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@color/gry"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                >
            </View>


            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/gray"
                android:textSize="@dimen/_14sdp"
                />

            <EditText
                android:textCursorDrawable="@drawable/black_cursor"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal"
                android:paddingLeft="@dimen/_5sdp"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_8sdp"
                android:hint=""
                android:textColor="@color/gray"
                android:inputType="textEmailAddress"
                />

            <View
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@color/gry"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                >
            </View>

            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pakage_name"
                android:textColor="@color/gray"
                android:textSize="@dimen/_14sdp"
                />

            <EditText
                android:textCursorDrawable="@drawable/black_cursor"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal"
                android:paddingLeft="@dimen/_5sdp"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_8sdp"
                android:hint=""
                android:textColor="@color/gray"
                android:inputType="textEmailAddress"
                />

            <View
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@color/gry"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                >
            </View>

            <TextView
                android:visibility="gone"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valid_date"
                android:textColor="@color/gray"
                android:textSize="@dimen/_14sdp"
                />

            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/RRValidDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/txtValidDate"
                    android:padding="@dimen/_5sdp"
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/imgdate"
                    android:visibility="visible"
                    />

                <ImageView
                    android:gravity="right"
                    android:layout_gravity="right"
                    android:id="@+id/imgdate"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/calender"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"/>

            </RelativeLayout>

            <View
                android:visibility="gone"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@color/gry"
                android:layout_width="match_parent"
                android:layout_height="1sp"
                >
            </View>

            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_date"
                android:textColor="@color/gray"
                android:textSize="@dimen/_14sdp"
                />

            <RelativeLayout
                android:id="@+id/RRTrasactiondATE"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/txtTrascaDate"
                    android:padding="@dimen/_5sdp"
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/img_date"
                    android:visibility="visible"
                    />

                <ImageView
                    android:gravity="right"
                    android:layout_gravity="right"
                    android:id="@+id/img_date"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/calender"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"/>

            </RelativeLayout>

            <View
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@color/gry"
                android:layout_width="match_parent"
                android:layout_height="1sp"
                >
            </View>

            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_amount"
                android:textColor="@color/gray"
                android:textSize="@dimen/_14sdp"
                />

            <EditText
                android:textCursorDrawable="@drawable/black_cursor"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal"
                android:paddingLeft="@dimen/_5sdp"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_8sdp"
                android:hint=""
                android:textColor="@color/gray"
                android:inputType="textEmailAddress"
                />

            <View
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@color/gry"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                >
            </View>

            <TextView
                android:layout_marginBottom="@dimen/_20sdp"
                android:id="@+id/txtPayment"
                android:gravity="center"
                android:background="@drawable/login_btn"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:text="Continue"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                />


        </LinearLayout>

    </RelativeLayout>

</layout>